# TCMiner-Verus

./: Makefile  Makefile.am  Makefile.in  Output-SourceControl-Git.txt  README.md  TCMiner-config.h  TCMiner-config.h.in  TCMiner.cpp  TCMiner.vcxproj  TCMiner.vcxproj.filters  api.cpp  build.cmd  ccminer.cpp  config.json  config.status  configure  configure.ac  configure.sh  crc32.c  miner.h  nvapi.cpp  nvml.cpp  serialize.hpp  stamp-h1  start.sh  util.cpp  vrminer  vrminer-config.h  vrminer-config.h.in  vrminer.conf  vrminer.cpp  vrminer.sln  vrminer.vcxproj  vrminer.vcxproj.filters
Algo256/: cuda_keccak256.cu
api/: index.php  local-sample.php  summary.pl  websocket.htm
autom4te.cache/: output.0  output.1  output.2  traces.1  traces.2
compat/: Makefile  Makefile.in
compat/jansson/: Makefile  Makefile.in
equi/: equihash.cpp
